--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,77 @@
 :root{
     --border: 1px solid red;
+    --body: rgb(30, 11, 80);
+    --board-bg: rgb(77, 30, 87);
+    --board-spot: rgba(221, 218, 218, 0.726);
+    --hover-spot: rgb(241, 239, 239);
+    --result-font: white;
+    --header: rgb(255, 255, 2);
+    --reset-btn: white;
 }
-#board-container {
+body{
+    background-color: var(--body);
+}
+h1 {
+    margin-top: 1.5em;
+    font-family: 'press start 2P';
+    color: var(--header);
+    text-align: center;
+    font-size: 30px;
+}
+#board {
     margin: auto;
-    width: 460px;
+    margin-top: 2em;
+    width: 450px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 10em);
+    grid-template-rows: repeat(3, 9em);
     gap: 0.6em;
-    background-color: black;
-    
-    /* border: var(--border); */
+    padding: 5px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px black;
+    background-color: var(--board-bg);
+    /* display: none; */
 }
-.spot {
-    background-color: white;
+#board:hover {
+    box-shadow: 0 0 10px rgba(226, 59, 226, 0.781);
 }
 .spot-btn {
-    height: 156px;
-    width: 144px;
+    height: 140px;
+    width: 139px;
     margin: 2px;
     border: none;
     border-radius: 10px;
-    background-color: rgb(192, 192, 192);
+    background-color: var(--board-spot);
     font-size: 8em;
 }
 .spot-btn:hover {
-    opacity: 0.5;
+    background-color: var(--hover-spot);
 }
 #result {
-    /* background-color: aqua;
-    height: 50px; */
+    color: var(--result-font);
+}
+#reset-container{
+    margin-top: 1.5em;
+    /* border: var(--border); */
+    display: flex;
+    justify-content: center;
+}
+#reset-btn {
+    background-color: var(--reset-btn);
+    color: #000;
+    border: 1px solid #000;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    gap: 8px;
+    line-height: 1.7;
+    padding: 7px 30px;
+    transition: all .14s ease-out;
+}
+#reset-btn:hover {
+    box-shadow: 0 5px pink;
+    transform: translate(0,-5px);
+}
+#reset-btn:focus-visible{
+    outline-offset: 1px;
 }
