--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1 {
 }
 #board {
     margin: auto;
-    width: 450px;
+    width: 460px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 9em);
@@ -87,6 +87,7 @@ h1 {
     margin-top: 8em;
     display: flex;
     justify-content: space-around;
+    line-height: 30px;
 }
 .players-window {
     width: 40%;
@@ -94,7 +95,6 @@ h1 {
     border: 1px solid black;
     border-radius: 10px;
     background-color: rgb(161, 129, 190);
-    /* display: none; */
 }
 
 h3 {
@@ -120,9 +120,9 @@ label {
     padding: 5px;
     border-radius: 5px;
     border: none;
+    min-width: 11em;
 }
 #start-btn {
     display: flex;
     align-items: center;
-    /* display: none; */
 }
